fixed the progress bar overlapping the nav bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,9 @@ h1 .glyphicon{
 	width: 100%;
 }
 .progress{
+	display:block;
 	width:100%;
-	height:20px;
+	height:31px;
 	clear:both;
 	margin-top:0;
 	margin-bottom:0;
@@ -57,6 +58,7 @@ h1 .glyphicon{
 .progress.completed{
 	overflow:hidden;
 	opacity:0;
+	display:none;
 }
 .progress-bar{
 	-webkit-transition: all 0.3s ease-out; 
